--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.sck.gcp</groupId>
 	<artifactId>gcp-01-storage-bigquery</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gcp-storage-bigquery</name>
+	<name>gcp-01-storage-bigquery</name>
 	<description>Demo project for Spring Boot Google Cloud Storage and BigQuery direct upload with batch</description>
 	<properties>
 		<java.version>1.8</java.version>
